--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Student Profile - Andrew Ssemanda</title>
-  <link rel="stylesheet" href="style/style.css" />
 </head>
 <body>
   <header>
@@ -19,7 +20,6 @@
   </nav>
 
   <main>
-    <link rel="icon" type="image/x-icon" hrel="images/favicon.ico"
     <section id="about">
       <h2>About Me</h2>
       <!-- Add your image here -->
