--- a/chamber/index.html
+++ b/chamber/index.html
@@ -115,6 +115,10 @@
 
   <footer>
     <div class="container">
+<p>
+  <a href="https://validator.w3.org/nu/?doc=https://yourdomain.com/wdd231/chamber/index.html" target="_blank" rel="noopener">Validate HTML</a>
+</p>
+
       <p>&copy; 2025 Kabale Chamber of Commerce. All rights reserved.</p>
     </div>
   </footer>
