--- a/chamber/join.html
+++ b/chamber/join.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Apply to join the Chamber of Commerce and discover membership benefits, networking opportunities, and exclusive resources for your organization." />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Join the Chamber</title>
     <link rel="stylesheet" href="styles.css" />
