--- a/chamber/join.html
+++ b/chamber/join.html
@@ -6,6 +6,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Join the Chamber</title>
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="styles.css" />
     <style>
         header nav {
@@ -115,15 +117,15 @@
     <header>
         <h1>Chamber of Commerce</h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="join.html">Join</a>
+            <a href="./index.html">Home</a>
+            <a href="./about.html">About</a>
+            <a href="./join.html">Join</a>
         </nav>
     </header>
 
     <main>
         <h2>Join the Chamber</h2>
-        <form method="get" action="thankyou.html">
+        <form method="get" action="./thankyou.html">
             <label>
                 First Name:
                 <input type="text" name="firstname" title="First Name" required autocomplete="given-name" />
