--- a/chamber/index.html
+++ b/chamber/index.html
@@ -54,8 +54,8 @@
 
     <!-- Members Display -->
     <div class="members-display" id="membersDisplay">
-      <!-- Member cards would be rendered here by JavaScript -->
-      <p style="margin:1.2rem 0;">Member list is currently unavailable.</p>
+      <!-- Members will be listed here. (No JS: static content or message) -->
+      <p style="margin:1.2rem 0;">Member listing is unavailable without JavaScript.</p>
     </div>
 
     <div class="main-sections">
@@ -93,8 +93,7 @@
             </div>
           </div>
           <div class="forecast" id="forecast">
-            <!-- Forecast days will be rendered here by JS -->
-            <div>Forecast unavailable</div>
+            <div>Weather information is unavailable without JavaScript.</div>
           </div>
         </div>
         <button type="button" class="refresh-spotlights-btn" id="refreshWeatherBtn">Refresh Weather</button>
@@ -105,8 +104,7 @@
     <section aria-labelledby="spotlights-title">
       <h2 id="spotlights-title">Member Spotlights</h2>
       <div class="spotlights" id="spotlights">
-        <!-- Spotlights would be rendered here by JavaScript -->
-        <p>Spotlights are currently unavailable.</p>
+        <p>Spotlights are unavailable without JavaScript.</p>
       </div>
       <button type="button" class="refresh-spotlights-btn" id="refreshSpotlightsBtn">Show Other Spotlights</button>
     </section>
@@ -122,10 +120,9 @@
 
   <footer>
     <div class="container">
-<p>
-  <a href="https://validator.w3.org/nu/?doc=https://yourdomain.com/wdd231/chamber/index.html" target="_blank" rel="noopener">Validate HTML</a>
-</p>
-
+      <p>
+        <a href="https://validator.w3.org/nu/?doc=https://yourdomain.com/wdd231/chamber/index.html" target="_blank" rel="noopener">Validate HTML</a>
+      </p>
       <p>&copy; 2025 Kabale Chamber of Commerce. All rights reserved.</p>
     </div>
   </footer>
