--- a/chamber/index.html
+++ b/chamber/index.html
@@ -13,7 +13,7 @@
   <header>
     <div class="container nav-wrapper">
       <h1>Kabale Chamber of Commerce</h1>
-      <button class="nav-toggle" aria-label="Toggle navigation"></button>
+      <button class="nav-toggle" aria-label="Toggle navigation">
         &#9776;
       </button>
       <nav>
@@ -126,5 +126,8 @@
       <p>&copy; 2025 Kabale Chamber of Commerce. All rights reserved.</p>
     </div>
   </footer>
+  <script src="scripts/scripts.js"></script>
+  <style src="stylesheets/styles.css"></style>
+  <image src="images.css"><</image>
 </body>
 </html>
