--- a/chamber/index.html
+++ b/chamber/index.html
@@ -128,6 +128,6 @@
   </footer>
   <script src="scripts/scripts.js"></script>
   <style src="stylesheets/styles.css"></style>
-  <image src="images.css"><</image>
+  <image src="images.css"></image>
 </body>
 </html>
