--- a/chamber/index.html
+++ b/chamber/index.html
@@ -127,7 +127,9 @@
     </div>
   </footer>
   <script src="scripts/scripts.js"></script>
-  <style src="stylesheets/styles.css"></style>
-  <image src="images.jpg"></image>
+  <img src="images.jpg"
+  <link rel="stylesheet" href="stylesheets/styles.css">
+  <!-- If you want to include another stylesheet, use <link rel="stylesheet" href="stylesheets/styles.css"> -->
+  <!-- If you want to display an image, use <img src="images.jpg" alt="Description of image"> -->
 </body>
 </html>
