--- a/chamber/index.html
+++ b/chamber/index.html
@@ -130,7 +130,7 @@
     </div>
   </footer>
 
-  <script src="scripts/scripts.js"></script>
+  <script src="scripts.js"></script>
 
   <!-- Optional image example -->
   <img src="images.jpg" alt="Description of image" style="display:none;" />
