--- a/chamber/index.html
+++ b/chamber/index.html
@@ -12,6 +12,8 @@
 <body>
   <header>
     <div class="container nav-wrapper">
+      <div class="hero-image-wrapper">
+    <img src="images/hero.jpg" alt="Kabale cityscape and hills" class="hero-image" />
       <h1>Kabale Chamber of Commerce</h1>
       <button class="nav-toggle" aria-label="Toggle navigation">&#9776;</button>
       <nav>
