--- a/chamber/index.html
+++ b/chamber/index.html
@@ -81,7 +81,7 @@
           </li>
         </ul>
       <!-- Weather Section -->
-      <section aria-labelledby="weather-title">
+      section <saria-labelledby="weather-title">
         <h2 id="weather-title">Kabale Weather</h2>
         <div id="weather">
           <div class="weather-today">
