--- a/chamber/index.html
+++ b/chamber/index.html
@@ -13,8 +13,9 @@
   <header>
     <div class="container nav-wrapper">
       <div class="hero-image-wrapper">
-    <img src="images/hero.jpg" alt="Kabale cityscape and hills" class="hero-image" />
-      <h1>Kabale Chamber of Commerce</h1>
+        <img src="images/hero.jpg" alt="Kabale cityscape and hills" class="hero-image" />
+        <h1>Kabale Chamber of Commerce</h1>
+      </div>
       <button class="nav-toggle" aria-label="Toggle navigation">&#9776;</button>
       <nav>
         <ul id="mainNav">
@@ -80,8 +81,9 @@
             <span>Online (Zoom)</span>
           </li>
         </ul>
+      </section>
       <!-- Weather Section -->
-      section <saria-labelledby="weather-title">
+      <section aria-labelledby="weather-title">
         <h2 id="weather-title">Kabale Weather</h2>
         <div id="weather">
           <div class="weather-today">
@@ -131,8 +133,8 @@
   </footer>
 
   <script src="scripts.js"></script>
-
   <!-- Optional image example -->
-  <img src="images.jpg" alt="Description of image" style="display:none;" />
+  <img src="images/hero.jpg" alt="Description of image" style="display:none;" />
 </body>
+</html>
 </html>
