--- a/chamber/index.html
+++ b/chamber/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Welcome to the Kabale Chamber of Commerce. Discover local businesses, upcoming events, and join our thriving community." />
-  <meta name="author" content="Kabale Chamber Web Team" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Welcome to the Kabale Chamber of Commerce. Discover local businesses, upcoming events, and join our thriving community.">
+  <meta name="author" content="Kabale Chamber Web Team">
   <title>Kabale Chamber of Commerce | Home</title>
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
     <div class="container nav-wrapper">
       <div class="hero-image-wrapper">
-        <img src="images/hero.jpg" alt="Kabale cityscape and hills" class="hero-image" />
+        <img src="images/hero.jpg" alt="Kabale cityscape and hills" class="hero-image">
         <h1>Kabale Chamber of Commerce</h1>
       </div>
       <button class="nav-toggle" aria-label="Toggle navigation">&#9776;</button>
@@ -47,7 +47,7 @@
     <!-- Search Members -->
     <form class="search-form" id="searchForm" autocomplete="off" aria-label="Search Chamber Members" action="#">
       <label for="searchInput">Search Chamber Members:</label>
-      <input type="text" id="searchInput" placeholder="Enter name, category, or address..." />
+      <input type="text" id="searchInput" placeholder="Enter name, category, or address...">
       <button type="submit">Search</button>
       <button type="button" id="clearSearchBtn">Clear</button>
       <div class="search-results" id="searchResults"></div>
@@ -87,7 +87,7 @@
         <h2 id="weather-title">Kabale Weather</h2>
         <div id="weather">
           <div class="weather-today">
-            <img id="weather-icon" src="" alt="Weather icon" style="display:none;">
+            <img id="weather-icon" src="" alt="Weather icon" style="display:none">
             <div>
               <span id="weather-temp">--°C</span>
               <span id="weather-desc"></span>
@@ -134,7 +134,7 @@
 
   <script src="scripts.js"></script>
   <!-- Optional image example -->
-  <img src="images/hero.jpg" alt="Description of image" style="display:none;" />
+  <img src="images/hero.jpg" alt="Description of image" style="display:none;">
 </body>
-</html>
+</body>
 </html>
