--- a/chamber/index.html
+++ b/chamber/index.html
@@ -178,6 +178,8 @@
 
   <script src="scripts.js"></script>
   <!-- Optional image example -->
-  <img src="images/hero.jpg" alt="Description of image" style="display:none;">
+  <div style="display:none;">
+    <img src="images/hero.jpg" alt="Description of image">
+  </div>
 </body>
 </html>
