--- a/chamber/index.html
+++ b/chamber/index.html
@@ -72,7 +72,7 @@
     <!-- Members Display -->
     <div class="members-display" id="membersDisplay">
       <script>
-        document.getElementById('membersDisplay').innerHTML = `
+        document.getElementById('membersDisplay').innerHTML = 
           <p style="margin:1.2rem 0;">Member listing is available without JavaScript.</p>
       </script>
     </div>
