--- a/chamber/index.html
+++ b/chamber/index.html
@@ -72,7 +72,7 @@
     <!-- Members Display -->
     <div class="members-display" id="membersDisplay" aria-label="Chamber Members">
       <div class="member-card">
-        <img src="images/bytefix.png" alt="ByteFix logo">
+        <img src="images/bytefix.png">
         <h3>ByteFix</h3>
         <p class="category">IT Services</p>
         <p class="address">123 Tech Lane, Bwindi</p>
@@ -81,7 +81,7 @@
         <p class="info">Computer repair and IT consulting.</p>
       </div>
       <div class="member-card">
-        <img src="images/solarbright.png" alt="SolarBright logo">
+        <img src="images/solarbright.png">
         <h3>SolarBright</h3>
         <p class="category">Energy</p>
         <p class="address">45 Solar Avenue, Bwindi</p>
@@ -90,7 +90,7 @@
         <p class="info">Solar panel installation and maintenance.</p>
       </div>
       <div class="member-card">
-        <img src="images/technova.png" alt="TechNova logo">
+        <img src="images/technova.png">
         <h3>TechNova</h3>
         <p class="category">Technology</p>
         <p class="address">Innovation Park, Kabale</p>
@@ -99,7 +99,7 @@
         <p class="info">Tech solutions for modern businesses.</p>
       </div>
       <div class="member-card">
-        <img src="images/urbanfoods.png" alt="UrbanFoods logo">
+        <img src="images/urbanfoods.png">
         <h3>UrbanFoods</h3>
         <p class="category">Retail</p>
         <p class="address">Market Street, Bwindi</p>
@@ -108,7 +108,7 @@
         <p class="info">Fresh groceries and organic produce.</p>
       </div>
       <div class="member-card">
-        <img src="images/greenharvest.png" alt="Green Harvest logo">
+        <img src="images/greenharvest.png">
         <h3>Green Harvest</h3>
         <p class="category">Agriculture</p>
         <p class="address">Harvest Road, Bwindi</p>
@@ -117,7 +117,7 @@
         <p class="info">Sustainable farming and produce supply.</p>
       </div>
       <div class="member-card">
-        <img src="images/safariwheels.png" alt="SafariWheels logo">
+        <img src="images/safariwheels.png">
         <h3>SafariWheels</h3>
         <p class="category">Transport</p>
         <p class="address">Safari Drive, Kabale</p>
